Update Dockerfile configuration, improve database connection handling, and enhance UI components

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -5,19 +5,18 @@ ENV PYTHONUNBUFFERED=1
 
 WORKDIR /app
 
-# System dependencies
+# System dependencies for PostgreSQL and compilation
 RUN apt-get update && apt-get install -y --no-install-recommends \
     build-essential \
+    libpq-dev \
+    gcc \
     && rm -rf /var/lib/apt/lists/*
 
-# Install uv
-RUN pip install --no-cache-dir uv
-
 # Copy dependency files first (better caching)
-COPY pyproject.toml uv.lock* ./
+COPY pyproject.toml ./
 
-# Install dependencies
-RUN uv sync --frozen
+# Install dependencies using pip (more reliable in container)
+RUN pip install --no-cache-dir uv && uv pip install --system -r pyproject.toml
 
 # Copy app code
 COPY . .
